--- a/index.html
+++ b/index.html
@@ -1,106 +1,179 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Hello, world!</title>
-  </head>
-  <body>
-<!--Navbar-->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+  <title>Hello, world!</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+  <div class="container-fluid">
+    <!--Navbar-->
+    <section class="navbar">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Navbar</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
-            </li>
-          </ul>
-        </div>
+        <nav class="navbar navbar-expand-lg navbar-dark">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="index.html"><img src="./img/JClogo.png" alt=""></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+              aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="index.html">
+                    <h5 class="navbar-text">Home</h5>
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="about.html">
+                    <h5 class="navbar-text">About</h5>
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="contact.html">
+                    <h5 class="navbar-text">Contact</h5>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
       </div>
-    </nav>
+    </section>
 
-<!--Carousel-->
-<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-  </div>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="img/mountains.png" class="d-block w-100" alt="mountains">
-    </div>
-    <div class="carousel-item">
-      <img src="img/red.png" class="d-block w-100" alt="red">
-    </div>
-    <div class="carousel-item">
-      <img src="img/snow.png" class="d-block w-100" alt="snow">
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
+    <br>
 
-<!--Cards-->
+    <!--Carousel-->
+    <section>
+      <div class="container-fluid">
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+              aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+              aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+              aria-label="Slide 3"></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="img/mountains.png" class="d-block w-100" alt="mountains">
+            </div>
+            <div class="carousel-item">
+              <img src="img/red.png" class="d-block w-100" alt="red">
+            </div>
+            <div class="carousel-item">
+              <img src="img/snow.png" class="d-block w-100" alt="snow">
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </div>
+    </section>
 
-<div class="container">
-  <div class="row">
-    <div class="col-md-4">
-      <div class="card" style="width: 18rem;">
-        <img src="img/mountains.png" class="card-img-top" alt="mountains">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Link to somewhere</a>
+    <br>
+    <!--Cards-->
+
+    <section class="cards text-center mx-auto pt-2 px-5">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-4">
+            <div class="card px-1 py-1 pt-1 mb-3">
+              <img src="https://www.hdcarwallpapers.com/walls/2020_ford_mustang_shelby_gt500_4k_3-HD.jpg" class="card-img-top" alt="mountains">
+              <div class="card-body">
+                <h5 class="card-title">Cars</h5>
+                <p class="card-text">
+                  Cars are something that always 
+                </p>
+                <a href="https://www.hdcarwallpapers.com/2020_ford_mustang_shelby_gt500_4k_3-wallpapers.html" class="btn">Source</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card px-1 py-1 pt-1 mb-3">
+              <img src="https://wallpaperaccess.com/full/562944.jpg" class="card-img-top" alt="red">
+              <div class="card-body">
+                <h5 class="card-title">Soccer</h5>
+                <p class="card-text">
+                  Watching and playing soccer is one of the things that I enjoy the most. Through it I have met many great people and created many good memories
+                </p>
+                <a href="https://wallpaperaccess.com/soccer-4k" class="btn">Source</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card px-1 py-1 pt-1">
+              <img src="https://thumbor.forbes.com/thumbor/711x415/https://specials-images.forbesimg.com/imageserve/5fc1935c89e8a9adad774b62/PS5-consoles/960x0.jpg?fit=scale" class="card-img-top" alt="snow">
+              <div class="card-body">
+                <h5 class="card-title">Videogames</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                  card's
+                  content.</p>
+                <a href="#" class="btn">Source</a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="col-md-4">
-      <div class="card" style="width: 18rem;">
-        <img src="img/red.png" class="card-img-top" alt="red">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Link to somewhere</a>
+    </section>
+
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 310">
+      <path fill="#002244" fill-opacity="1"
+        d="M0,224L48,218.7C96,213,192,203,288,213.3C384,224,480,256,576,234.7C672,213,768,139,864,138.7C960,139,1056,213,1152,213.3C1248,213,1344,139,1392,101.3L1440,64L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
+      </path>
+    </svg>
+
+    <section class="footer text-center">
+      <footer>
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-md-4">
+              <h2>About Me</h2>
+              <p>
+                To know more of me, go to the about page
+              </p>
+              <a class="btn" href="about.html">About Page</a>
+
+            </div>
+            <div class="col-md-4">
+              <img src="./img/JClogo.png" alt="">
+            </div>
+            <div class="col-md-4">
+              <h2>Creator</h2>
+              <p>
+                A website created by Johnny Castano Martinez
+              </p>
+            </div>
+          </div>
         </div>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <div class="card" style="width: 18rem;">
-        <img src="img/snow.png" class="card-img-top" alt="snow">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Link to somewhere</a>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+        <br>
+      </footer>
+    </section>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"></script>
+  </div>
 
-  </body>
+</body>
+
 </html>
