--- a/contact.html
+++ b/contact.html
@@ -90,9 +90,9 @@
                             <div class="card-body">
                               <h1 class="card-title"> Or Call Here</h1>
                               <h3>Phone</h3>
-                              <h4>(731) 437-9787</h4>
+                              <h4>(420) 555-5555</h4>
                               <h3>Email</h3>
-                              <h4>Johnnycastano28@gmail.com</h4>
+                              <h4>BruhBruh@gmail.com</h4>
                             </div>
                           </div>
                     </div>
