--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-  <title>Hello, world!</title>
+  <title>About Me</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -53,87 +53,48 @@
     <br>
 
     <!--Carousel-->
-    <section>
-      <div class="container-fluid">
-        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-          <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-              aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-              aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-              aria-label="Slide 3"></button>
-          </div>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="img/mountains.png" class="d-block w-100" alt="mountains">
-            </div>
-            <div class="carousel-item">
-              <img src="img/red.png" class="d-block w-100" alt="red">
-            </div>
-            <div class="carousel-item">
-              <img src="img/snow.png" class="d-block w-100" alt="snow">
+    <section class="text-center">
+      <div>
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-md-12">
+              <h1>About Me</h1>
+              <hr>
             </div>
           </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-            data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-            data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
         </div>
       </div>
     </section>
 
-    <br>
-    <!--Cards-->
-
-    <section class="cards text-center mx-auto pt-2 px-5">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-md-4">
-            <div class="card px-1 py-1 pt-1">
-              <img src="img/mountains.png" class="card-img-top" alt="mountains">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                  card's
-                  content.</p>
-                <a href="#" class="btn">Link to somewhere</a>
-              </div>
+    <section class="text-center">
+      <div>
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-md-6 about-img">
             </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card px-1 py-1 pt-1">
-              <img src="img/red.png" class="card-img-top" alt="red">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                  card's
-                  content.</p>
-                <a href="#" class="btn">Link to somewhere</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card px-1 py-1 pt-1">
-              <img src="img/snow.png" class="card-img-top" alt="snow">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                  card's
-                  content.</p>
-                <a href="#" class="btn">Link to somewhere</a>
+            <div class="col-md-6">
+              <div class="card px-1 py-1 pt-1 mb-3 card-about">
+                <div class="card-body">
+                  <h5 class="card-title">About Me</h5>
+                  <hr>
+                  <p class="card-text">
+                    I am a regular highschool student who likes many things.
+                    I like to code (as seen here), to cook, to play many games, play soccer, watch soccer and many more
+                    things.
+                    Today is also the last day of the first semester so I am very excited to go home.
+                    In my free time I like to do all of these things, especially being with family.
+                  </p>
+                  <hr>
+                  <img src="./img/madison.webp" alt="">
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
     </section>
+
+    <br>
 
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 310">
       <path fill="#002244" fill-opacity="1"
@@ -155,6 +116,8 @@
             </div>
             <div class="col-md-4">
               <img src="./img/JClogo.png" alt="">
+              <br>
+              <a href="https://getbootstrap.com/docs/5.1/examples/footers/" class="btn">Bootstrap</a>
             </div>
             <div class="col-md-4">
               <h2>Creator</h2>
