--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>Contact Me</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -58,46 +58,46 @@
                 <div class="row">
                     <div class="col-md-6">
                         <h1>Message Me Here</h1>
-                </div>
-                <div class="row">
-                    <div class="col-md-6">
-                        <br>
-                        <div class="col-md-8 contact-boxes">
-                            <form>
-                                <div class="input-group">
-                                    <input type="text" id="name" required>
-                                    <label for="name">Your Name</label>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <br>
+                            <div class="col-md-8 contact-boxes">
+                                <form>
+                                    <div class="input-group">
+                                        <input type="text" id="name" required>
+                                        <label for="name">Your Name</label>
+                                    </div>
+                                    <div class="input-group">
+                                        <input type="text" id="number" required>
+                                        <label for="number">Phone No.</label>
+                                    </div>
+                                    <div class="input-group">
+                                        <input type="email" id="email" required>
+                                        <label for="email">Email</label>
+                                    </div>
+                                    <div class="input-group">
+                                        <textarea id="message" rows="8" required></textarea>
+                                        <label for="message">Comment</label>
+                                    </div>
+                                    <button type="submit" class="submit-contact">SUBMIT</button>
+                                </form>
+                            </div>
+                        </div>
+
+                        <div class="col-md-6 mt-3">
+                            <div class="card px-1 py-1 pt-1 mb-3">
+                                <div class="card-body">
+                                    <h1 class="card-title"> Or Call Here</h1>
+                                    <h3>Phone</h3>
+                                    <h4>(420) 555-5555</h4>
+                                    <h3>Email</h3>
+                                    <h4>BruhBruh@gmail.com</h4>
                                 </div>
-                                <div class="input-group">
-                                    <input type="text" id="number" required>
-                                    <label for="number">Phone No.</label>
-                                </div>
-                                <div class="input-group">
-                                    <input type="email" id="email" required>
-                                    <label for="email">Email</label>
-                                </div>
-                                <div class="input-group">
-                                    <textarea id="message" rows="8" required></textarea>
-                                    <label for="message">Comment</label>
-                                </div>
-                                <button type="submit" class="submit-contact">SUBMIT</button>
-                            </form>
+                            </div>
                         </div>
                     </div>
-                    
-                    <div class="col-md-6 mt-3">
-                        <div class="card px-1 py-1 pt-1 mb-3">
-                            <div class="card-body">
-                              <h1 class="card-title"> Or Call Here</h1>
-                              <h3>Phone</h3>
-                              <h4>(420) 555-5555</h4>
-                              <h3>Email</h3>
-                              <h4>BruhBruh@gmail.com</h4>
-                            </div>
-                          </div>
-                    </div>
                 </div>
-            </div>
         </section>
 
 
@@ -121,6 +121,8 @@
                         </div>
                         <div class="col-md-4">
                             <img src="./img/JClogo.png" alt="">
+                            <br>
+                            <a href="https://getbootstrap.com/docs/5.1/examples/footers/" class="btn">Bootstrap</a>
                         </div>
                         <div class="col-md-4">
                             <h2>Creator</h2>
