--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-  <title>Hello, world!</title>
+  <title>Home</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -66,13 +66,13 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="img/mountains.png" class="d-block w-100" alt="mountains">
+              <img src="img/tesla.webp" class="d-block w-100" alt="mountains">
             </div>
             <div class="carousel-item">
-              <img src="img/red.png" class="d-block w-100" alt="red">
+              <img src="img/arsenal.jpg" class="d-block w-100" alt="red">
             </div>
             <div class="carousel-item">
-              <img src="img/snow.png" class="d-block w-100" alt="snow">
+              <img src="img/Mexico.jpg" class="d-block w-100" alt="snow">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -97,13 +97,15 @@
         <div class="row">
           <div class="col-md-4">
             <div class="card px-1 py-1 pt-1 mb-3">
-              <img src="https://www.hdcarwallpapers.com/walls/2020_ford_mustang_shelby_gt500_4k_3-HD.jpg" class="card-img-top" alt="mountains">
+              <img src="https://www.hdcarwallpapers.com/walls/2020_ford_mustang_shelby_gt500_4k_3-HD.jpg"
+                class="card-img-top" alt="mountains">
               <div class="card-body">
                 <h5 class="card-title">Cars</h5>
                 <p class="card-text">
-                  Cars are something that always 
+                  Cars are something that always excites me to see, such as a regular car on the street or a race in F1.
                 </p>
-                <a href="https://www.hdcarwallpapers.com/2020_ford_mustang_shelby_gt500_4k_3-wallpapers.html" class="btn">Source</a>
+                <a href="https://www.hdcarwallpapers.com/2020_ford_mustang_shelby_gt500_4k_3-wallpapers.html"
+                  class="btn">Source</a>
               </div>
             </div>
           </div>
@@ -113,7 +115,8 @@
               <div class="card-body">
                 <h5 class="card-title">Soccer</h5>
                 <p class="card-text">
-                  Watching and playing soccer is one of the things that I enjoy the most. Through it I have met many great people and created many good memories
+                  Watching and playing soccer is one of the things that I enjoy the most. Through it I have met many
+                  great people and created many good memories
                 </p>
                 <a href="https://wallpaperaccess.com/soccer-4k" class="btn">Source</a>
               </div>
@@ -121,7 +124,9 @@
           </div>
           <div class="col-md-4">
             <div class="card px-1 py-1 pt-1">
-              <img src="https://thumbor.forbes.com/thumbor/711x415/https://specials-images.forbesimg.com/imageserve/5fc1935c89e8a9adad774b62/PS5-consoles/960x0.jpg?fit=scale" class="card-img-top" alt="snow">
+              <img
+                src="https://thumbor.forbes.com/thumbor/711x415/https://specials-images.forbesimg.com/imageserve/5fc1935c89e8a9adad774b62/PS5-consoles/960x0.jpg?fit=scale"
+                class="card-img-top" alt="snow">
               <div class="card-body">
                 <h5 class="card-title">Videogames</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
@@ -155,6 +160,8 @@
             </div>
             <div class="col-md-4">
               <img src="./img/JClogo.png" alt="">
+              <br>
+              <a href="https://getbootstrap.com/docs/5.1/examples/footers/" class="btn">Bootstrap</a>
             </div>
             <div class="col-md-4">
               <h2>Creator</h2>
